--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
 <div class="container mt-5">
-    <h2 class="mb-4">Shark Twibbon</h2>
+    <h2 class="mb-4">Template Callie</h2>
     <div class="custom-file mb-3">
         <input type="file" class="custom-file-input" id="imageUpload" accept="image/*">
         <label class="custom-file-label" for="imageUpload">Pilih foto...</label>
